# pdex

./: CLAUDE.md  README.md  pyproject.toml  test-single.py
.github/workflows/: ci.yml
benches/: basic.py
scripts/: compare.py
src/pdex/: __init__.py  _math.py  _parallel.py  _pseudobulk.py  _single_cell.py  _utils.py
src/pdex2/: __init__.py  _math.py  _utils.py
tests/: bench_expr.py  conftest.py  test_experimental_correctness.py  test_integration.py  test_internals.py  test_math.py  test_parallel.py  test_pbdex.py  test_pdex.py  test_utils.py
