[project]
name = "pdex"
version = "0.2.0"
description = "Parallel differential expression for single-cell perturbation sequencing"
readme = "README.md"
authors = [{ name = "noam teyssier", email = "noam.teyssier@arcinstitute.org" }]
requires-python = ">=3.11"
dependencies = [
    "anndata>=0.12.10",
    "numba>=0.64.0",
    "numba-mwu>=0.1.1",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "pytest>=8.3.5",
    "pytest-benchmark>=5.1.0",
    "ruff>=0.11.8",
    "ty>=0.0.18",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
