[project]
name = "pdex"
version = "0.2.0"
description = "Parallel differential expression for single-cell perturbation sequencing"
readme = "README.md"
authors = [{ name = "noam teyssier", email = "noam.teyssier@arcinstitute.org" }]
requires-python = ">=3.11"
dependencies = [
    "anndata>=0.12.10",
    "numba>=0.64.0",
    "numba-mwu>=0.1.1",
    "numpy>=2.4.2",
    "pandas>=2.3.3",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]
